--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Lato', sans-serif;
-  font-size: 18px;
+  font-size: 12px ;
 }
 
 body, html{
@@ -52,7 +52,7 @@ nav.navbar{
 
 div.intro .text{
   text-align: center;
-  font-size: 22px;
+  font-size: 21px;
   border: 2px solid #03a9f4;
   border-radius: 20px;
   padding: 45px;
@@ -88,7 +88,7 @@ h2{
   text-align: center;
   padding-bottom: 10px;
   padding-top: 10px;
-
+  font-size: 30px;
 }
 
 div.experiences .card-text {
@@ -154,15 +154,16 @@ footer{
 
 div.experiences .card-img-top{
   height: 250px;
-  width: 250px;
+  width: 50%;
   display: block;
   margin: 10px auto;
+ 
 }
 
 
 div.projects .card-img-top{
   height: 250px;
-  width: 300px;
+  width: 50%;
   display: block;
   margin: 10px auto;
 }
@@ -174,8 +175,8 @@ div.projects .card-text{
 
 }
 div.education .card-img-top{
-  height: 300px;
-  width: 250px;
+  height: 250px;
+  width: 45%;
   display: block;
   margin: 10px auto;
 
@@ -187,3 +188,4 @@ div.education .card-text{
   text-align: center;
 
 }
+
