--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,8 +2,9 @@
   padding: 0;
   margin: 0;
   font-family: 'Lato', sans-serif;
+  font-weight: normal;
   font-size: 15px;
-}
+ }
 
 body, html{
   height: 100%;
@@ -59,6 +60,7 @@ div.intro .text{
   border: 2px solid #03a9f4;
   border-radius: 20px;
   padding: 45px;
+  
 }
 
 div.intro .social_media ul{
